# spotify-graphs

./: .gitignore  pyproject.toml
scripts/: download.py
