[tool.poetry]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = ""
name = "spotify-graphs"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
httpx = "^0.26.0"
python = "^3.10"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
types-tqdm = "^4.66.0.20240106"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
